recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:15: error: not found: value level1
  sierpinski(level1,length/2)
             ^