recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (level==0){
    avance(length)
  droite(60)
  avance(length)
  droite(60)
  avance(length)
  droite(120)
  }
  avance(length)
  droite(60)
  avance(length)
  droite(60)
  avance(length)
  droite(60)
  sierpinski(level1,length/2)
  
}